# COSMICRadio

./: .gitignore  Cargo.toml  README.md  justfile  project.md
data/: com.system76.CosmicRadio.desktop  com.system76.CosmicRadio.metainfo.xml  stations.toml
debian/: changelog  control  copyright  rules
src/: app.rs  artwork.rs  audio.rs  config.rs  main.rs  url_handler.rs
