[package]
name = "cosmic-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet", "tokio", "wayland"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
