[package]
name = "cosmic-radio"
version = "0.1.0"
edition = "2021"
authors = ["@AdamMKG <stonehouse.adam@gmail.com>"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet", "tokio", "wayland"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5.0"
gstreamer = { version = "0.23", features = ["v1_24"] }
gstreamer-play = { version = "0.23", features = ["v1_24"] }
reqwest = { version = "0.12", features = ["default-tls", "json", "blocking"] }
sha2 = "0.10"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
